# ast-fine-tuned

./: .gitignore  LICENSE  README.md  main.ipynb  pyproject.toml  save_stream.py  test_hubert.ipynb  train_ast_on_gtzan.ipynb
classifying_helper/: README.md  pyproject.toml
classifying_helper/app/: __init__.py  routes.py
classifying_helper/app/templates/: index.html
notebooks/: test_ast.ipynb  train_hubert_on_gtzan.ipynb
