[tool.poetry]
name = "classifying-helper"
version = "0.1.0"
description = ""
authors = ["jacobgill37 <jacobgill37@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
gunicorn = "^23.0.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
